--- a/package.json
+++ b/package.json
@@ -3,18 +3,35 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-  "start": "parcel src/index.html",
-  "build": "parcel build src/index.html"
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "parcel": "^2.12.0"
+    "assert": "^2.1.0",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
+    "events": "^3.3.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "parcel": "^2.12.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "querystring-es3": "^0.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.4",
+    "util": "^0.12.5",
+    "vm-browserify": "^1.1.2"
   },
   "dependencies": {
     "html5-qrcode": "^2.3.8",
-    "qrious": "^4.0.2"
+    "node-fetch": "^3.3.2",
+    "qrious": "^4.0.2",
+    "serialport": "^12.0.0"
   }
 }
